<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/relativeLayout"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblMensaje" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSimple"
        android:id="@+id/btnSimple"
        android:layout_below="@+id/lblMensaje"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnToogle"
        android:text="New ToggleButton"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:layout_below="@+id/btnSimple"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Switch"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:id="@+id/btnSwitch"
        android:layout_below="@+id/btnSimple"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="112dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:contentDescription="@string/estrella"
        android:src="@mipmap/ic_estrella"
        android:layout_below="@id/btnSwitch"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/btnCustomToggle"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@layout/toogle_style"
        android:layout_marginTop="39dp"
        android:textOff=""
        android:textOn="" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:layout_below="@+id/btnCustomToggle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/ic_estrella"
        style="?android:borderlessButtonStyle"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox"
        android:id="@+id/checkBox"
        android:layout_alignBottom="@+id/btnSimple"
        android:layout_toRightOf="@+id/btnSimple"
        android:layout_toEndOf="@+id/btnSimple"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/btnToogle"
        android:layout_alignRight="@+id/checkBox"
        android:layout_alignEnd="@+id/checkBox">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRadio1"
            android:id="@+id/btnRadio1"
            android:layout_gravity="right" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRadio2"
            android:id="@+id/btnRadio2"
            android:layout_gravity="right" />
    </RadioGroup>


</RelativeLayout>
